<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/absensi_guru"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/btn_start_absensi"
            android:backgroundTint="#3aa8c1">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/data_guru"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/btn_start_data_guru"
            android:backgroundTint="#3aa8c1">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/data_buku_perpustakaan"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/btn_start_data_buku"
            android:backgroundTint="#3aa8c1">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/data_sarana_dan_prasarana"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/btn_start_sarana_prasarana"
            android:backgroundTint="#3aa8c1">
        </Button>

    </LinearLayout>

</FrameLayout>